--- a/Class 1/homework1.html
+++ b/Class 1/homework1.html
@@ -7,24 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <label for = "firstName">First Name:</label> </br>
-    <input type="text" id="fName">
-    <br>
-    <br>
-    <label for = "lastName">Last Name:</label> </br>
-    <input type="text" id="lName">
-    <br>
-    <br>
-    <label for = "birthYear">Birth Year:</label> </br>
-    <input type="text" id="studentYear">
-    <br>
-    <br>
-    <label for = "acadeny">Academy:</label> </br>
-    <input type="text" id="studentAcademy">
-    <br>
-    <br>
-    <button id="signingUp">Signing Up</button>
+    <h1 id="name"></h1>
+    <p id ="age"></p>
+    <p id="average"></p>
+    <ul id="students"></ul>
 
     <script src="homework1.js"></script>
 </body>
