--- a/Class2/homework1.html
+++ b/Class2/homework1.html
@@ -20,7 +20,7 @@
     <br>
     <br>
     <button id="button">Clicked generate</button>
-    <h1 id="headerText"></h1>
+    <div id="result"></div>
     <script src="homework1.js"></script>
 </body>
 </html>
