--- a/Class 3/homework1.html
+++ b/Class 3/homework1.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="nameOfAcademy"></div>
+    <ul id="nameOfStudensts"></ul>
     <button id="request">Request</button>
     <script src="jQuery.js"></script>
     <script src="homework1.js"></script>
