--- a/Class 3/homework1.html
+++ b/Class 3/homework1.html
@@ -10,7 +10,9 @@
     <div id="nameOfAcademy"></div>
     <ul id="nameOfStudensts"></ul>
     <button id="request">Request</button>
-    <script src="jQuery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" 
+    crossorigin="anonymous"></script>
+    <script src="jQueri.js"></script>
     <script src="homework1.js"></script>
 </body>
 </html>
