--- a/Class 3/homework1.html
+++ b/Class 3/homework1.html
@@ -7,9 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="nameOfAcademy"></div>
-    <ul id="nameOfStudents"></ul>
     <button id="request">Request</button>
+    <br>
+    <br>  
+    <h1 id="nameOfAcademy"></h1>
+    <br>
+    <br>    
+    <ul id="nameOfStudents"></ul>   
+
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" 
     crossorigin="anonymous"></script>
     <script src="homework1.js"></script>
