--- a/Class 3/homework2.html
+++ b/Class 3/homework2.html
@@ -7,9 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="nameOfAcademy"></div>
-    <ul id="nameOfStudents"></ul>
     <button id="request">Request</button>
+    <br>
+    <br>
+    <h1 id="personName"></h1>
+    <br>
+    <br>
+    <div id="personStats"></div>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" 
     crossorigin="anonymous"></script>
     <script src="homework2.js"></script>
